<?xml version="1.0"?>
<package format="2">
  <name>reflexxes_position_controllers</name>
  <version>0.0.0</version>
  <description>The reflexxes_position_controllers package</description>

  <maintainer email="marco.esposito@tum.de">Marco Esposito</maintainer>

  <license>LGPL</license>

  <author email="marco.esposito@tum.de">Marco Esposito</author>

  <depend>realtime_tools</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>control_toolbox</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>reflexxes_type2</depend>
  <depend>trac_ik_lib</depend>
  <depend>kdl_conversions</depend>
  <depend>eigen_conversions</depend>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <controller_interface plugin="${prefix}/ros_control_plugins.xml"/>
  </export>
</package>
